# omegabot

./: CMakeLists.txt  Makefile  README.md  controller  controller.pro  raspberry_receive_cam  raspberry_receive_cam.cpp  raspberry_send_cam.cpp
omega_microcontroller/: platformio.ini
omega_microcontroller/src/: main.cpp
server_autogen/: deps
server_autogen/include/: raspberry_send_cam.moc  raspberry_send_cam.moc.d
